重構 GUN 初始化，使用多個公共服務器並添加連接狀態監控

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <h1>共同創作空間</h1>
         <div class="user-info">
             <input type="text" id="username" placeholder="請輸入您的名稱" />
+            <div id="connection-status" class="connection-status">連線中...</div>
         </div>
         <div class="workspace">
             <div class="sidebar">
